to startup system